<resources>
    <string name="app_name">Taller</string>
    <string name="text_1">Johnny Deep</string>
    <string name="text_2">Bogota, Colombia</string>
    <string name="text_3">527</string>
    <string name="text_4">Stories</string>
    <string name="text_5">518</string>
    <string name="text_6">Followers</string>
    <string name="text_7">284</string>
    <string name="text_8">Following</string>
    <string name="text_9">My trip to Itali</string>
    <string name="text_10">Varios lugares de Italia para compartir</string>
    <string name="atr_1">texto1</string>

    <string name="cont_1a">Google Maps</string>
    <string name="cont_11">La solución de Google para los usuarios perdidos. Esta brújula digital permite encontrar direcciones y rutas alternativas.</string>

    <string name="cont_2">Facebook Mobile App</string>
    <string name="cont_22">44% de la población de smartphones.Sistema operativo: Android, iOS, Windows Phone, Blackberry 10.</string>

    <string name="cont_3">YouTube</string>
    <string name="cont_33">La plataforma de videos online más grande del mundo disponible para tu móvil,</string>

    <string name="cont_4">Google+ Mobile App</string>
    <string name="cont_44">GlobalIndexWeb arroja que el mayor motor de búsqueda y su red social posee 290 millones de unidades instaladas </string>


    <string name="cont_5">WhatsApp Messenger</string>
    <string name="cont_55">Uno de los pioneros en el servicio de mensajes entre teléfonos inteligentes. Envía 10,000 millones de mensajes y recibe 17,000 millones, según datos arrojados por la firma.</string>


    <string name="cont_6">Instagram</string>
    <string name="cont_66">Con más de 130 millones de usuarios, el brazo fotográfico de Facebook permite personalizar imágenes con filtros </string>
</resources>
