<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chris.taller.MainActivity">




    <RelativeLayout
        android:id="@+id/rl_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorfondo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">



        <RelativeLayout
            android:id="@+id/rl_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:padding="5dp">

        <ImageView
            android:id="@+id/ima"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/icono_dos"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"/>




<TextView
    android:id="@+id/txt_1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/text_1"
    android:textSize="30sp"
    android:textStyle="normal"
    android:layout_below="@id/ima"
    android:layout_centerHorizontal="true"
   />

            <TextView
                android:id="@+id/txt_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_2"
                android:layout_below="@id/txt_1"
                android:layout_centerHorizontal="true"
                />
</RelativeLayout>

        </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_1"
        android:background="@color/colorfondogris"
        android:padding="15dp">

      <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">

          <TextView
              android:id="@id/tv_4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_3"
              android:textColor="@android:color/white"
              android:textSize="25sp"
              android:layout_alignParent="true"
              android:layout_centerHorizontal="true"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/text_4"
              android:textColor="@android:color/black"
              android:textSize="18sp"
              android:layout_below="@+id/tv_4"/>



      </RelativeLayout>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                >

                <TextView
                    android:id="@id/tv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_5"
                    android:textColor="@android:color/white"
                    android:textSize="25sp"
                    android:layout_alignParent="true"
                    android:layout_centerHorizontal="true"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_6"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    android:layout_below="@+id/tv_4"/>



                </RelativeLayout>


<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true">

    <TextView
        android:id="@id/tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_7"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_alignParent="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_8"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_below="@+id/tv_4"/>





</RelativeLayout>


        </RelativeLayout>



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/rl_3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/googlemapsplay_150x150"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_1a"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_11"
                />
        </LinearLayout>










    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/facebookapp_150x150"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_2"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_22"
                />
        </LinearLayout>










    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/youtubeapp_150x150"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_3"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_33"
                />
        </LinearLayout>










    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">



        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/whatsappplay_150x150"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_5"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cont_55"
                />
        </LinearLayout>










    </LinearLayout>









</LinearLayout>


    </ScrollView>


</LinearLayout>




    </RelativeLayout>






